--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>Hello World! - KevDeveloperFrontend</title>
 </head>
 <body>
+    <header>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>   
+
+    </header>
+
     <h1>Hello World!</h1>
+
     <p>Welcome to my first HTML page.</p>
     <p>This is a simple example of an HTML document.</p> 
 </body>
